# esp32

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old  说明.md  说明.txt  项目介绍.txt
components/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_home.c  ui_home.h
components/ui/images/: ui_img_back_png.c  ui_img_bizhi_png.c  ui_img_brightness_png.c  ui_img_cloudy_png.c  ui_img_connect_wifi_png.c  ui_img_home_png.c  ui_img_setting_png.c  ui_img_sprinkle_png.c  ui_img_sun_png.c  ui_img_systeminfo_png.c  ui_img_weather_png.c
components/ui/screens/: ui_brightness.c  ui_brightness.h  ui_home.c  ui_home.h  ui_home1.c  ui_home1.h  ui_setting.c  ui_setting.h  ui_systemInfo.c  ui_systemInfo.h  ui_weather.c  ui_weather.h
include/: ILI9488_lvgl.h  WS2812.h  aliot_dm.h  aliot_ota.h  data_analysis.h  io_control.h  mynvs.h  mywifi.h  uart.h  weather.h
main/: CMakeLists.txt  idf_component.yml  main.c  main.h
src/: ILI9488_lvgl.c  WS2812.c  aliot_dm.c  aliot_ota.c  data_analysis.c  io_control.c  mynvs.c  mywifi.c  uart.c  weather.c
